cmake_minimum_required(VERSION 3.26)
project(C_Nitin)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_Nitin
        "Resulting Applications/Array search.cpp"
        "Resulting Applications/Com interest.c"
        "Resulting Applications/DaytoYear calc.c"
        "Resulting Applications/firsttosecond.c"
        "Resulting Applications/Simple Interest.c"
        "Resulting Applications/sqrtcalc.c"
        Arithmatic.c
        Armstrong.c
        fib.c
        "grade(ifelse).c"
        grade.c
        leap.c
        lowtouppercase.c
        new.c
        oddwve.c
        pattern1.c
        pr1.c
        tempCodeRunnerFile.c
        tendigits.c
        "Resulting Applications/delete an element in array.c"
        "Resulting Applications/insert an element.c"
        "Resulting Applications/whileloop.h"
        "Resulting Applications/whileloop.c"
        linear_search_dsa.c
        graph_using_adjacencymatrix.c
        graph_using_adjacencymatrix.c
        graphics/1.c
        graphics/1.c
)
