cmake_minimum_required(VERSION 3.26)
project(C___Nitin)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(C___Nitin
        "Resulting Applications/1(0).cpp"
        "Resulting Applications/1(1)sort.cpp"
        "Resulting Applications/1.cpp"
        "Resulting Applications/Array length calculator.cpp"
        "Resulting Applications/Pointer arithmetic.cpp"
        "Resulting Applications/Prime no. finder.cpp"
        "Resulting Applications/Prime no.calc(range).cpp"
        "Resulting Applications/Prime no.calc.cpp"
        "Resulting Applications/Working Arithmatic Keyboard.cpp"
        1.cpp
        1.h
        1imple.cpp
        CSVReader.cpp
        CSVReader.h
        menulist.cpp
        Merkelmain.cpp
        Merkelmain.h
        OrderBookEntry.cpp
        OrderBookEntry.h
        tempCodeRunnerFile.cpp
        test.cpp
        test1.cpp
        tokenise.cpp
        topic.cpp)
